--- a/apps/query/templates/query/operation_query.html
+++ b/apps/query/templates/query/operation_query.html
@@ -64,6 +64,9 @@
                     </div>
                 </div>
             </div>
+            {% if date_input_error %}
+            <div class="mt-2 text-danger" role="alert">{{ date_input_error }}</div>
+            {% endif %}
         </form>
     </div>
 
