--- a/templates/store/shop_list.html
+++ b/templates/store/shop_list.html
@@ -19,9 +19,14 @@
                 <div class="store-subtitle">&#x95E8;&#x5E97;&#x57FA;&#x7840;&#x4FE1;&#x606F;&#x4E0E;&#x7ECF;&#x8425;&#x72B6;&#x6001;&#x6982;&#x89C8;</div>
             </div>
         </div>
-        {% if user.is_authenticated %}
+        {% if can_create_shop %}
         <div class="store-actions">
             <a href="{% url 'store:shop_create' %}" class="ui-btn ui-btn-primary">&#x65B0;&#x5EFA;&#x5E97;&#x94FA;</a>
+            <a href="{% url 'store:shop_export' %}" class="ui-btn ui-btn-outline">&#x5BFC;&#x51FA;&#x5E97;&#x94FA;</a>
+            <a href="{% url 'store:shop_import' %}" class="ui-btn ui-btn-outline">&#x5BFC;&#x5165;&#x5E97;&#x94FA;</a>
+        </div>
+        {% elif user.is_authenticated %}
+        <div class="store-actions">
             <a href="{% url 'store:shop_export' %}" class="ui-btn ui-btn-outline">&#x5BFC;&#x51FA;&#x5E97;&#x94FA;</a>
             <a href="{% url 'store:shop_import' %}" class="ui-btn ui-btn-outline">&#x5BFC;&#x5165;&#x5E97;&#x94FA;</a>
         </div>
@@ -73,7 +78,7 @@
     </div>
     {% else %}
     <div class="ui-alert">
-        <strong>&#x6682;&#x65E0;&#x5E97;&#x94FA;</strong>&#xFF0C;&#x8BF7;&#x70B9;&#x51FB;&#x4E0A;&#x65B9;&#x6309;&#x94AE;&#x521B;&#x5EFA;&#x65B0;&#x5E97;&#x94FA;&#x3002;
+        <strong>&#x6682;&#x65E0;&#x5E97;&#x94FA;</strong>&#x3002;&#x8BF7;&#x901A;&#x8FC7;&#x5E97;&#x94FA;&#x7ED1;&#x5B9A;&#x7533;&#x8BF7;&#x4E0E;&#x5BA1;&#x6279;&#x6D41;&#x7A0B;&#x65B0;&#x589E;&#x5E97;&#x94FA;&#x3002;
     </div>
     {% endif %}
 </div>
